updated color-scheme to dark + fixed overflowing background on support page

--- a/inspect-gpt-next/styles/globals.css
+++ b/inspect-gpt-next/styles/globals.css
@@ -5,6 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  color-scheme: dark;
+}
+
 body {
   width: 100%;
   overflow-x: hidden;
